--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-icons": "^3.7.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "reactstrap": "^8.0.1",
